fieldx/tests/uncompilable/1.77+serde/non_copy.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
 --> tests/uncompilable/non_copy.rs
  |
  |     foo: String,
  |          ^^^^^^ the trait `Copy` is not implemented for `String`
  |
note: required by a bound in `__field_implements_copy`
 --> tests/uncompilable/non_copy.rs
  |
  | #[fxstruct]
  | ^^^^^^^^^^^ required by this bound in `__field_implements_copy`
  = note: this error originates in the attribute macro `fxstruct` (in Nightly builds, run with -Z macro-backtrace for more info)
